[package]
name = "aggregator"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
rumqttc = "0.25.1"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["serde"] }
